# college_essay_coach

./: .gitignore  README.md  agent.py  main.py  project_context.md  prompts.py  pyproject.toml  requirements.txt  transcriber.py
sessions/: conversation_2025-06-07_21-59-38.json
